feat: Create tests, modify setup.sh, comment DatabaseInitializer, remove later